fixup! BB 32308: Use direct browser sizing for letterboxing.
BB 44041: Use fixed positioning to make dialog overlays cover the whole content of letterboxed tabs.

--- a/toolkit/components/resistfingerprinting/content/letterboxing.css
+++ b/toolkit/components/resistfingerprinting/content/letterboxing.css
@@ -42,7 +42,12 @@
 
 :root:not([inDOMFullscreen]) .letterboxing.letterboxing-ready .browserContainer:not(.responsive-mode)
   > .browserStack:not(.exclude-letterboxing) {
+
   place-content: start center;
+
+  & > .dialogStack {
+    position: fixed;
+  }
 }
 
 .browserDecorator {
